# model-views

./: Cargo.toml  README.md  sonar-project.properties
crates/model-views/: Cargo.toml
crates/model-views-derive/: Cargo.toml
crates/model-views-derive/src/: lib.rs
crates/model-views/src/: lib.rs  patch.rs
crates/model-views/tests/: derive.rs
