[package]
name = "model-views-derive"
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
darling.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true
