[package]
name = "model-views"
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
default = ["derive", "serde"]
derive = ["dep:model-views-derive"]
serde = ["dep:serde", "serde/derive", "serde/alloc"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]

[dependencies]
chrono = { workspace = true, optional = true }
model-views-derive = { version = "0.1.0", path = "../model-views-derive", optional = true }
serde = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[[test]]
name = "derive"
path = "tests/derive.rs"
required-features = ["derive"]
